# qrx

./: LICENSE  PATCH_NOTES.md
GUIWALLET/: AURA_ASSISTANT.md  AURA_INITIAL_SCREEN_FIX.md  AURA_LAYOUT_FIX.md  BDK_MAC_BUILD_FIX.md  BTC_BACKUP_RESTORE.md  BTC_BDK_INTEGRATION.md  BTC_BDK_STATUS.md  BTC_LIGHT_FUNCTIONAL_WIRING.md  BTC_LIGHT_MULTIFALLBACK.md  BTC_SEED_ENCRYPTION.md  BUILD_NOTES.md  COMPILE_FIX_2.md  HTLC_HASHLOCK_COMPATIBILITY.md  INTRO_ACKNOWLEDGEMENT_FIX.md  LOGO_AURA_FIX.md  QRX_COMMANDS.md  QRX_CORE_DAEMON.md  QRX_STAKING.md  QUANTUM_GUARD_REQUESTER.md  QUANTUM_SWAPS_ROADMAP.md  QUANTUM_SWAPS_SAFETY_GUI.md  QUBITCOIN_BRANDING.md  QUB_EXCHANGE_READY_PRIVACY_DESIGN.md  README.md  RESPONSIVE_SPLASH.md  SIDECAR_SETUP.md  SPLASH_INTRO_FIX.md  SPLASH_STUCK_FIX.md  VALIDATOR_MODE_ONBOARDING.md  package.json
GUIWALLET/scripts/: check-sidecars.sh  prepare-sidecars.sh
GUIWALLET/src/: index.html
GUIWALLET/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
GUIWALLET/src-tauri/icons/: icon.icns
GUIWALLET/src-tauri/src/: main.rs
qrx-core/: BOOTSTRAP_VALIDATORS_AND_DEV_SHARE.md  CMakeLists.txt  DETERMINISTIC_WEIGHTED_ROTATION.md  FINALITY_VOTING_LAYER.md  MACOS_ARM64_AND_WALLET_PASSPHRASE_FIX.md  MAINNET_RUNTIME_HARDENING.md  P2P_SEED_MAXCONNECTIONS.md  QRXDB_EXPERIMENTAL_README.txt  QRXDB_HYBRID_SNAPSHOTS.md  QRXDB_MMAP_CONTINUATION_PATCH.txt  QRXDB_PRODUCTION_HARDENING_NOTES.txt  QRXDB_ROADMAP.txt  QRXDB_SHA3_CHAIN_PIPELINE_PATCH.txt  QRXDB_TOOLS.md  QRXD_SHUTDOWN_FIX.md  README.md  README_JSON_RPC_PATCH.txt  README_OPTION_A_WINDOWS.txt  README_WINDOWS_PATCH.txt  SLASHING_AND_SIGNATURE_ENFORCEMENT.md  STABLE_STORAGE_UPGRADE.txt
qrx-core/chain/: chain.conf
qrx-core/configs/: alpha-mainnet.conf
qrx-core/scripts/: backup_snapshot.sh  committee_finalize.sh  committee_vote.sh  demo_rc6.sh  devnet_3nodes.sh  gen_sbom.py  preflight_alpha.sh  release_manifest.sh  restore_snapshot.sh  sign-release.sh  spawn_public_alpha.sh
qrx-core/src/: chain_params.c  chain_params.h  core_frontend.c  core_frontend.h  qrx.c  qrx_cli.c  qrx_core.h  qrx_main.c  qrx_timestamp_consensus.c  qrx_timestamp_consensus.h  qrxd.c  qrxdb.c  qrxdb.h  qrxdb_compact_tool.c  qrxdb_salvage_tool.c  qrxdb_snapshot_tool.c  qrxdb_verify_tool.c
qrx-core/src/consensus/: qrx_deterministic_rotation.c  qrx_deterministic_rotation.h  qrx_finality.c  qrx_finality.h  qrx_finality_state.c  qrx_finality_state.h  qrx_nonce_enforcement.c  qrx_nonce_enforcement.h  qrx_slashing.c  qrx_slashing.h  qrx_timestamp_enforcement.c  qrx_timestamp_enforcement.h
qrx-core/src/economics/: qrx_economics.c  qrx_economics.h
qrx-core/src/genesis/: qrx_bootstrap_validators.c  qrx_bootstrap_validators.h
qrx-core/src/mempool/: qrx_mempool_limits.h
qrx-core/src/network/: qrx_p2p_config.c  qrx_p2p_config.h  qrx_p2p_limits.h  qrx_peer_relay.c  qrx_peer_relay.h  qrx_peer_store.c  qrx_peer_store.h
qrx-core/src/protocol/: qrx_chainid.h  qrx_domain_separation.h  qrx_protocol_version.h
qrx-core/src/runtime/: qrx_signal_shutdown.c  qrx_signal_shutdown.h
qrx-core/src/security/: qrx_secure_memory.c  qrx_secure_memory.h
qrx-core/src/storage/: qrx_snapshot_nonce_state.h  qrxdb_shutdown.c  qrxdb_shutdown.h
qrx-core/src/treasury/: qrx_dev_addresses.c  qrx_dev_addresses.h
qrx-core/tests/: hybrid_signatures.sh  rc1_crash_recovery.sh  rc1_smoke.sh  rc1_sync.sh  rc62_tokenomics_consensus.sh  rc6_blockflow.sh  rc6_committee_consensus.sh  rc6_hardened_features.sh  rc6_hobby_smoke.sh  rc6_staking.sh  tx_stress.py
qrx_core/: BUILD_MAINNET_RC_REPORT.txt  PUBLIC_MAINNET_FINAL_BUILD_REPORT.txt  PUBLIC_MAINNET_FINAL_SMOKE.txt  README.md  SHIELDED_POOL_BUILD_REPORT.txt  STEALTH_BUILD_REPORT.txt  STEALTH_PRODUCTION_BUILD_REPORT.txt  index.html  package.json  tsconfig.json  vite.config.ts
qrx_core/scripts/: build-core-linux-macos.sh  build-core-windows.ps1
qrx_core/src/: App.tsx  main.tsx  styles.css  types.ts
qrx_core/src-tauri/: Cargo.toml  tauri.conf.json
qrx_core/src-tauri/src/: commands.rs  main.rs  qrx_bridge.rs
qrx_core/src/api/: qrx.ts
qrx_core/src/components/: Sidebar.tsx  Topbar.tsx
qrx_core/src/pages/: Activity.tsx  Dashboard.tsx  Receive.tsx  Send.tsx  Settings.tsx  Stake.tsx
