[package]
name = "qrx-wallet"
version = "1.0.0"
description = "QRX desktop wallet"
authors = ["OpenAI"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.6", features = ["dialog-all", "fs-all", "path-all", "shell-open"] }
dirs = "5"
thiserror = "1"
bdk = { version = "0.29", features = ["all-keys", "electrum"] }
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
argon2 = "0.5"
miniscript = { version = "10.2.3", features = ["std"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
